# MTRN4231

./: .gitignore  Gripper.ino  README.md  README_2.md  brain.cpp  requirements.txt  urdfruncommand.md
4231_scripts/: setupFakeur5e.sh  setupRealur5e.sh
CV/: .~lock.readme.docx#  README.md  piece_detection.py  readme.md
CV/install/: local_setup.sh  setup.sh
CV/log/: latest_build  latest_list
CV/src/: readme_command.md
CV/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
CV/src/log/: latest_build
CV/src/my_robot_cv/: setup.cfg  setup.py
CV/src/my_robot_cv/my_robot_cv/: object_recognizer.py
CV/src/robot_arm_mover/: package.xml  setup.cfg  setup.py
CV/src/robot_arm_mover/launch/: launch.py
arm/launch/: arm.launch.py
arm/src/: arm_moveit_server.cpp
brain/: package.xml
brain/launch/: cv_real.launch.py  simulation_real.launch.py
brain/src/: brain.cpp
cv_testing/: color_thresholding.py  gray_thresholding.py
end_effector/: README.md  setup.cfg  setup.py
end_effector/launch/: real_robot_bringup.launch.py
end_effector/my_gripper_interfaces/: CMakeLists.txt  package.xml
end_effector/my_gripper_pkg/: setup.cfg  setup.py
end_effector/my_gripper_pkg/launch/: gripper.launch.py
end_effector/my_gripper_pkg/my_gripper_pkg/: arduino_code_backup.txt  end_effector_node.py
end_effector/urdf/: my_gripper.urdf  ur_with_gripper.xacro
lab3-main/install/: local_setup.sh  setup.sh
lab3-main/log/: latest_build
lab3-main/src/lab3_moveit/: CMakeLists.txt  package.xml
lab3-main/src/lab3_moveit/src/: move_to_marker.cpp
lab3-main/src/object_detect/: setup.cfg  setup.py
lab4-main/install/: local_setup.sh  setup.sh
lab4-main/log/: latest_build
lab4-main/src/lab4_perception_example/: setup.cfg  setup.py
launch_scripts/: fake_launch.sh  real_launch.sh
my_gripper/install/: local_setup.sh  setup.sh
my_gripper/install/my_gripper_pkg/share/my_gripper_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
my_gripper/launch/: launch.py
my_gripper/my_gripper_pkg/: end_effector_node.py
src/brain/: package.xml  setup.py
src/gripper/: package.xml  setup.py
src/interfaces/: package.xml  setup.py
src/interfaces_src/: CMakeLists.txt  package.xml
src/interfaces_src/srv/: CloseGripper.srv  MoveArm.srv
src/perception/: package.xml  setup.py
src/transformations/: package.xml  setup.cfg  setup.py
tictactoe-bot/: frames_2025-11-04_13.44.48.gv
tictactoe-bot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tictactoe-bot/launch_scripts/: real_launch.sh
tictactoe-bot/log/: latest_build
tictactoe-bot/src/arm/: CMakeLists.txt  README.md  package.xml
tictactoe-bot/src/arm/launch/: fake.arm.launch.py  moveit_fake.launch.py  moveit_real.launch.py  real.arm.launch.py  ur_control_fake.launch.py  ur_control_real.launch.py
tictactoe-bot/src/arm/src/: arm.cpp  arm_moveit_server.cpp  arm_moveit_server_old.cpp
tictactoe-bot/src/brain/: CMakeLists.txt  package.xml
tictactoe-bot/src/brain/launch/: cv_real.launch.py  fake.launch.py  fake_launch.sh  real.launch.py  setup_gripper.launch.py  setup_gripper_fake.launch.py  simulation_real.launch.py
tictactoe-bot/src/brain/rviz_config/: rviz.rviz
tictactoe-bot/src/brain/src/: brain.cpp  tictactoe.cpp
tictactoe-bot/src/computer_vision/: package.xml  setup.py
tictactoe-bot/src/cv/: package.xml  setup.py
tictactoe-bot/src/depth_camera/: package.xml  setup.py
tictactoe-bot/src/end_effector/: package.xml  setup.py
tictactoe-bot/src/end_effector/end_effector/: gripper.py
tictactoe-bot/src/end_effector/launch/: display.launch.py
tictactoe-bot/src/end_effector/urdf/: my_gripper.urdf  ur_with_gripper.xacro
tictactoe-bot/src/interfaces/: CMakeLists.txt  package.xml
tictactoe-bot/src/interfaces/msg/: BoardPose.msg
tictactoe-bot/src/interfaces/srv/: CloseGripper.srv
tictactoe-bot/src/simulation/: CMakeLists.txt  package.xml
tictactoe-bot/src/visualisation/: CMakeLists.txt  package.xml  setup.py
tictactoe-bot/src/visualisation/meshes/: GripperPickupWhite.stl  X_TicTacToe.stl
tictactoe-bot/src/visualisation/src/: visualisation.cpp
tictactoe-bot/src/visualization/: CMakeLists.txt  package.xml  setup.py
tictactoe-bot/src/visualization/launch/: visualization.launch.py
tictactoe-bot/src/visualization/meshes/: Board.stl  GripperClosed.stl  GripperOpen.stl  GripperPickupBlack.stl  GripperViz.stl  O_TicTacToe.stl
tictactoe-bot/src/visualization/src/: visualization.cpp
tictactoe-bot/src/webui/: main.js  readme.md  ui.html
tictactoe_ui/: package.xml  setup.cfg  setup.py
tictactoe_ui/tictactoe_ui/: gui_node.py
urdf/my_gripper_description/: CMakeLists.txt  package.xml
urdf/my_gripper_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
urdf/my_gripper_description/install/my_gripper_description/share/my_gripper_description/: package.bash  package.zsh
urdf/my_gripper_description/launch/: display.launch.py
urdf/my_gripper_description/rviz/: ur5e_with_gripper.rviz
urdf/my_gripper_description/urdf/: my_gripper.xacro
urdf/ur_with_gripper_description/: setup.cfg  setup.py
urdf/ur_with_gripper_description/install/: local_setup.sh  setup.sh
urdf/ur_with_gripper_description/install/ur_with_gripper_description/share/ur_with_gripper_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
urdf/ur_with_gripper_description/install/ur_with_gripper_description/share/ur_with_gripper_description/launch/: display.launch.py
urdf/ur_with_gripper_description/install/ur_with_gripper_description/share/ur_with_gripper_description/urdf/: ur_with_gripper.xacro
urdf/ur_with_gripper_description/launch/: display.launch.py  real_robot_bringup.launch.py
urdf/ur_with_gripper_description/urdf/: ur_with_gripper.xacro
visualization/: package.xml
visualization/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
visualization/meshes/: my_gripper.stl
visualization/visualization/: attach_gripper.py
webui/: index.html  style.css
(+209 files in other folders)
