<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelayout="1.0"?>
<package format="3">
  <name>my_gripper_description</name>
  <version>1.0.0</version>
  <description>Gripper description package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>robot_state_publisher</depend>
  <!-- <depend>joint_state_publisher_gui</depend> -->  <!-- Comment out for now -->
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>