<?xml version="1.0"?>
<package format="3">
  <name>arm</name>
  <version>0.0.0</version>
  <description>MoveIt arm control node for TicTacToe bot.</description>
  <maintainer email="ryan103a@gmail.com">ryan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>interfaces</depend>

  <depend>ros_ur_driver</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
