<?xml version="1.0"?> 
<package format="3">
  <name>brain</name>
  <version>0.0.1</version>
  <description>Brain node for controlling UR5 to play TicTacToe</description>
  <maintainer email="wesleydonaldnz@gmail.com">Wesley Donald</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build/runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>interfaces</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>