<?xml version="1.0"?>
<package format="3">
  <name>end_effector</name>
  <version>0.0.1</version>
  <description>ROS 2 Python node to control the gripper via Arduino.</description>
  <maintainer email="wesleydonaldnz@gmail.com">mtrn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
