<?xml version="1.0"?>
<package format="3">
  <name>interfaces</name>
  <version>0.0.1</version>
  <description>Custom service definitions for robot control</description>
  <maintainer email="wesleydonaldnz@gmail.com">Wesley Donald</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencies used in .srv files -->
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>

