<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_gripper_pkg</name>
  <version>0.0.0</version>
  <description>Package to control an Arduino gripper</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <!-- 1. This tells colcon WHAT tool to use -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies for Python Nodes -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Dependencies for .srv files -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  
 
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>